# AugmentTest01

./: .coverage  .gitignore  Dockerfile  LICENSE  ONBOARDING_FIX.md  README.md  TEST_PLAN.md  docker-compose.yml  exo Multi-Agent Framework System Prompt.md  fix_onboarding.py  install_dependencies.sh  open_in_app_mode.sh  pytest.ini  requirements.txt  run_exo.py  run_tests.py  test_exo.py  test_onboarding.py  ui-preview.html
exo/: README.md  __init__.py  main.py  pyproject.toml  setup.py
exo/agents/: __init__.py  base_agent.py  command_control.py  domain.py  llm_manager.py  mcp_manager.py  mcp_server.py  primary.py  software_engineer.py  voice_assistant.py
exo/config/: __init__.py  api_keys.py  llm_keys.py
exo/core/: __init__.py  agent_configuration.py  configuration.py  mcp_server_manager.py  onboarding.py  service_registry.py  system.py  system_prompts.py
exo/desktop/: __init__.py  context.py
exo/knowledge/: __init__.py
exo/mcp/: __init__.py  filesystem.py
exo/scripts/: install_local_mcp.py  manage_local_mcp.py
exo/services/: google_api.py
exo/tests/: README.md  __init__.py  conftest.py  test_base_agent.py  test_llm_manager.py  test_mcp_integration.py  test_message_handling.py  test_onboarding.py  test_primary_agent.py  test_service_registry.py  test_system_integration.py  test_system_prompts.py  test_web_server.py
exo/ui/: __init__.py  animated_dot.py  chat_window.py  electron_ui.py  voice_interface.py  web_server.py  websocket_client.py
exo/ui/electron/: README.md  electron-builder.js  index.html  installer.nsh  main.js  (+5 more)
exo/utils/: __init__.py
(+23 files in other folders)
